test/arrays/johnk/associative/badKeyType.chpl
var D : domain(string);
var arr : [D] int = ["foo"=>1, 2=>3];
